searxng/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: searxng
  name: searxng
  namespace: searxng
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      nodeSelector:
        storage: longhorn
      containers:
        - name: searxng
          image: docker.io/searxng/searxng:2026.9.11-ffe96f8a6
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETGID
                - SETUID
          volumeMounts:
            - name: searxng
              mountPath: /etc/searxng
            - name: searxng-settings-volume
              mountPath: /etc/searxng/settings.yml
              subPath: settings.yml
      volumes:
        - name: searxng-ovpn-conf
          secret:
            secretName: searxng-ovpn-conf
        - name: searxng
          persistentVolumeClaim:
            claimName: searxng
        - name: searxng-settings-volume
          secret:
            secretName: settings-yml
