searxng/service.yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: searxng
  name: searxng
  namespace: searxng
spec:
  selector:
    app: searxng
  type: ClusterIP
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
