searxng/searxng.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: searxng
  name: searxng
  namespace: searxng
spec:
  replicas: 1
  revisionHistoryLimit: 3
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: searxng
  template:
    metadata:
      labels:
        app: searxng
    spec:
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: searxng
          image: docker.io/searxng/searxng:2026.2.27-8e9ed5f9b
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - CHOWN
                - SETGID
                - SETUID
          volumeMounts:
            - name: searxng
              mountPath: /etc/searxng
            - name: searxng-settings-volume
              mountPath: /etc/searxng/settings.yml
              subPath: settings.yml
      volumes:
        - name: searxng
          persistentVolumeClaim:
            claimName: searxng
        - name: searxng-settings-volume
          secret:
            secretName: settings-yml
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: searxng
  name: searxng
  namespace: searxng
spec:
  selector:
    app: searxng
  type: ClusterIP
  ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: searxng
  namespace: default
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`search.mandariini.uk`)
      middlewares:
        - name: authentik
          namespace: authentik
      priority: 10
      services:
        - name: searxng
          namespace: searxng
          port: 8080
    - kind: Rule
      match: "Host(`search.mandariini.uk`) && PathPrefix(`/outpost.goauthentik.io/`)"
      priority: 15
      services:
          - kind: Service
            name: ak-outpost-authentik-embedded-outpost
            namespace: authentik
            port: 9000
  tls:
    secretName: mandariini-uk-tls
